--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A high level multiline string manipulation library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run-script compile && mocha ./test",
+    "compile": "./node_modules/.bin/babel lib/ -d dist/",
+    "prepublish": "npm run-script compile"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/sungwoncho/editer/issues"
   },
-  "homepage": "https://github.com/sungwoncho/editer#readme"
+  "homepage": "https://github.com/sungwoncho/editer#readme",
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "locater": "^1.2.2",
+    "lodash": "^4.5.0"
+  }
 }
